index.css
/* ... */
.footer {
    background-color: #000;
    margin-top: 24px;
    display: block;
    padding-left: 32px;
    padding-right: 32px;

    & > div {
        padding-top: 24px;
        padding-bottom: 24px;
        margin: auto;
        max-width: 900px; 
        width: 100%;
    }

    & a {
        color: white;
        text-decoration: underline;
    }
}

@media only screen and (max-width: 600px) {

    .logo {
        & span {
            display: none;
        }
    }

    .page1-body {
        flex-direction: column;
        

        & .page1-container .page1-content {
            flex-direction: column;
        }
    }

    .feature-page {
    
        &.feat1 {
    
            & .image-container {
                width: 100%;
                margin-top: 0;
                
                & .image {
                    margin-top: 0;
                }
            }
        }
    
        &.feat2 {
    
            & .image-container {
                width: 100%;
                margin-top: 0;
                margin-bottom: 0;
    
                & .image {
                }
            }
        }
    
        &.feat3 {
            
            & .content-type2 {
            }
    
            & .text {
    
                & h1 {
                }
    
                & span {
                }
            }
    
            & .image-container {
                width: 100%;
    
                & .image {
                }
            }
        }
    
        & .content {
            flex-direction: column;
    
            & .text {

                margin-bottom: 0;
    
                & h1 {
                }
    
                & span {
                }
            }
        }
    }

    .page4 {
    
        & .content-outer {
        }
        
        & .content {
            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
        }
    }
}

